2007-11-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-effect.h:
	* clutter/clutter-effect.c:
	(clutter_effect_template_new_for_duration): Add a simple constructor
	for implicitly creating a ClutterTimeline with a given duration.

2007-11-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Update with the new public symbols

	* clutter/clutter-script.h:
	* clutter/clutter-script-private.h:
	* clutter/clutter-script.c:
	(parse_signals), (json_object_end),
	(signal_info_free), (object_info_free): Parse the "signals"
	member for GObjects.

	(clutter_script_connect_signals),
	(clutter_script_connect_signals_full): Add new API for autoconnecting
	signal handlers using the UI definition files.

	* tests/test-script.c:
	* tests/test-script.json: Test signal autoconnection.

2007-11-15  Matthew Allum  <mallum@openedhand.com>

	* clutter/Makefile.am:
	* clutter/eglx/Makefile.am:
	* clutter/eglx/clutter-backend-egl.c:
	* clutter/eglx/clutter-backend-egl.h:
	* clutter/eglx/clutter-eglx.h:
	* clutter/eglx/clutter-event-egl.c:
	* clutter/eglx/clutter-stage-egl.c:
	* clutter/eglx/clutter-stage-egl.h:
	* clutter/glx/Makefile.am:
	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	* clutter/glx/clutter-event-glx.c:
	* clutter/glx/clutter-glx.h:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-stage-glx.h:
	* clutter/x11/Makefile.am:
	* clutter/x11/clutter-backend-x11-private.h:
	* clutter/x11/clutter-backend-x11.c:
	* clutter/x11/clutter-backend-x11.h:
	* clutter/x11/clutter-event-x11.c:
	* clutter/x11/clutter-stage-x11.c:
	* clutter/x11/clutter-stage-x11.h:
	* clutter/x11/clutter-x11.h:
	Create a new X11 backend class of which EGL and GLX 'real' backends
	then subclass. Effectively shares all X11 code between both backends
	avoids code duplication and brings many missing features to EGL X
	backend. Requires some cleanup and testing. (#518)

	* clutter/cogl/gles/cogl.c: (cogl_color):