@@ -484,23 +484,36 @@ clutter_perspective_get_type
 ClutterTimeline
 ClutterTimelineClass
 clutter_timeline_new
+clutter_timeline_new_for_duration
 clutter_timeline_clone
+
+<SUBSECTION>
 clutter_timeline_set_speed
 clutter_timeline_get_speed
+clutter_timeline_set_duration
+clutter_timeline_get_duration
+clutter_timeline_set_loop
+clutter_timeline_get_loop
+clutter_timeline_set_n_frames
+clutter_timeline_get_n_frames
+clutter_timeline_set_delay
+clutter_timeline_get_delay
+ClutterTimelineDirection
+clutter_timeline_set_direction
+clutter_timeline_get_direction
+
+<SUBSECTION
 clutter_timeline_start
 clutter_timeline_pause
 clutter_timeline_stop
-clutter_timeline_set_loop
-clutter_timeline_get_loop
 clutter_timeline_rewind
 clutter_timeline_skip
 clutter_timeline_advance
 clutter_timeline_get_current_frame
-clutter_timeline_set_n_frames
-clutter_timeline_get_n_frames
+clutter_timeline_get_progress
+clutter_timeline_get_progressx
 clutter_timeline_is_playing
-clutter_timeline_set_delay
-clutter_timeline_get_delay
+
 <SUBSECTION Standard>
 CLUTTER_TIMELINE
 CLUTTER_IS_TIMELINE
